@@ -22,6 +22,10 @@ What's New in Python 2.7.1?
 Library
 -------
 
+- Issue #10323: itertools.islice() now consumes the minimum number of
+  inputs before stopping.  Formerly, the final state of the underlying
+  iterator was undefined.
+
 - Issue #10565: The collections.Iterator ABC now checks for both
   ``__iter__`` and ``next``.
 
